# eddy

./: CMakeLists.txt
App/: ArgumentHandler.cpp  ArgumentHandler.h  Buffer.cpp  Buffer.h  CommandHandler.cpp  CommandHandler.h  Console.cpp  Console.h  DefaultArgumentHandler.cpp  Document.cpp  Document.h  Eddy.cpp  Eddy.h  EditAction.cpp  Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  Forward.h  Gutter.cpp  Gutter.h  Palette.h  Scratch.cpp  Scratch.h  Scrollbar.cpp  Scrollbar.h  StatusBar.cpp  StatusBar.h  Text.cpp  Text.h  Theme.cpp  main.cpp
Core/: CMakeLists.txt  Checked.h  Error.cpp  Error.h  FileBuffer.cpp  FileBuffer.h  Format.h  Logging.cpp  Logging.h  Process.cpp  Process.h  Resolve.cpp  StringBuffer.cpp  StringUtil.cpp  StringUtil.h
Core/test/: CEscape.cpp  CMakeLists.txt  Format.cpp  Join.cpp  ParsePairs.cpp  Resolve.cpp  Split.cpp  Strip.cpp
LSP/: CPlusPlus.cpp  CPlusPlus.h  JSON.cpp  JSON.h  LSP.cpp  LSP.h  LSPMessages.h  Message.cpp  Message.h
LSP/Specification/: generate_cpp.py
Lexer/: BasicParser.cpp  BasicParser.h  CMakeLists.txt  CommentScanner.cpp  CustomScanner.cpp  IdentifierScanner.cpp  KeywordScanner.cpp  Lexer.cpp  Lexer.h  NumberScanner.cpp  PlainTextParser.cpp  QStringScanner.cpp  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  WhitespaceScanner.cpp
Lexer/test/: CMakeLists.txt  CommentTest.cpp  CustomScannerTest.cpp  KeywordTest.cpp  LexerTest.cpp  LexerTest.h  NumberTest.cpp  QStringTest.cpp  WhitespaceTest.cpp
Mode/: CPlusPlus.cpp  CPlusPlus.h  Mode.cpp  Mode.h  PlainText.cpp  PlainText.h  Scribble.h
Parser/: CPlusPlus.cpp  CPlusPlus.h  EddyParser.cpp  EddyParser.h  PlainText.cpp  PlainText.h  ScratchParser.cpp  ScratchParser.h  Scribble.cpp  Scribble.h
Scribble/: Context.h  Parser.cpp  Parser.h  Processor.cpp  Processor.h  Scribble.cpp  Scribble.h
Scribble/Interp/: CommandAdapter.cpp  CommandAdapter.h  ExpressionResult.cpp  ExpressionResult.h  Function.cpp  Function.h  Interpreter.cpp  Interpreter.h  Operator.h  Value.cpp  Value.h
Scribble/Syntax/: ControlFlow.cpp  ControlFlow.h  Expression.cpp  Expression.h  Forward.h  Function.cpp  Function.h  Literal.cpp  Literal.h  Statement.cpp  Statement.h  Syntax.cpp  Syntax.h  SyntaxNodeType.h  Variable.cpp  Variable.h
Test/: JSONTest.cpp  LSPTest.cpp  LSPTest.h  ScribbleTest.cpp  ScribbleTest.h
Widget/: Alert.cpp  Alert.h  App.cpp  App.h  Command.cpp  Command.h  Frame.cpp  Geometry.h  GraphicsContext.cpp  GraphicsContext.h  Key.cpp  Key.h  Layout.cpp  ModalWidget.cpp  SDLContext.cpp  SDLContext.h  Text.cpp  Text.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WindowedWidget.cpp
